--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "academy",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-  "dev": "next",
-  "build": "next build",
-  "start": "next start"
-},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+    "dev": "vocs dev",
+    "build": "vocs build",
+    "preview": "vocs preview"
+  },
   "dependencies": {
-    "next": "^14.1.0",
-    "nextra": "^2.13.3",
-    "nextra-theme-docs": "^2.13.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "latest",
+    "react-dom": "latest",
+    "vocs": "latest"
   }
 }
