--- a/modular-academy/.gitignore
+++ b/modular-academy/.gitignore
@@ -4,9 +4,17 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
 
 # production
-/dist
+/build
 
 # misc
 .DS_Store
@@ -17,8 +25,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
 # typescript
 *.tsbuildinfo
-
-# environment variables
-.env.local
+next-env.d.ts
