--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vocs preview"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
     "react": "latest",
     "react-dom": "latest",
     "vocs": "latest"
