--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,21 +25,10 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm run build || true
-
-      - name: Print build output
-        run: cat build.log || echo "No build output"
-        
-      - name: List output files
-        run: |
-          if [ -d "build" ]; then
-            ls -l build
-          else
-            echo "Build directory does not exist."
-          fi
+        run: pnpm run build
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages
-          folder: build
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
