--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,13 +4,6 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
-
-permissions: write-all
-
-concurrency:
-  group: pages
-  cancel-in-progress: false
 
 jobs:
   build-and-deploy:
@@ -19,17 +12,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 18
-          cache: 'pnpm'
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
 
       - name: Install pnpm
         run: npm install -g pnpm
@@ -46,6 +33,11 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           force_orphan: true
+          # The following lines assign commit authorship to the official
+          # GH-Actions bot for deploys to `gh-pages` branch:
+          # https://github.com/actions/checkout/issues/13#issuecomment-724415212
+          # The GH actions bot is used by default if you didn't specify the two fields.
+          # You can swap them out with your own user credentials.
           cname: docs.celestia.org
-          user_name: 'jcstein'
-          user_email: 'joshcs@celestia.org'
+          user_name: jcstein
+          user_email: joshcs@celestia.org
