--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
+    "@types/react": "^18.3.1",
     "react": "latest",
     "react-dom": "latest",
     "vocs": "latest"
